// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adding sources updates pending breakpoints for a changed source 1`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 5,
    "sourceId": "server1.conn76.child1/30",
    "sourceUrl": "http://localhost:8000/examples/bar.js",
  },
  "location": Object {
    "column": undefined,
    "line": 7,
    "sourceUrl": "http://localhost:8000/examples/bar.js",
  },
}
`;

exports[`initializing when pending breakpoints exist in perfs syncs pending breakpoints 1`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 5,
    "sourceId": "server1.conn76.child1/30",
    "sourceUrl": "http://localhost:8000/examples/bar.js",
  },
  "location": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/bar.js",
  },
}
`;

exports[`invalid breakpoint location a corrected corresponding pending breakpoint is added 1`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "line": 5,
    "sourceId": "foo",
    "sourceUrl": "http://localhost:8000/examples/foo",
  },
  "location": Object {
    "column": undefined,
    "line": 7,
    "sourceUrl": "http://localhost:8000/examples/foo",
  },
}
`;

exports[`when adding breakpoints a corresponding pending breakpoint should be added 1`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "line": 5,
    "sourceId": "foo",
    "sourceUrl": "http://localhost:8000/examples/foo",
  },
  "location": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo",
  },
}
`;

exports[`when adding breakpoints adding and deleting breakpoints add a corresponding pendingBreakpoint for each addition 1`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "line": 5,
    "sourceId": "foo",
    "sourceUrl": "http://localhost:8000/examples/foo",
  },
  "location": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo",
  },
}
`;

exports[`when adding breakpoints adding and deleting breakpoints add a corresponding pendingBreakpoint for each addition 2`] = `
Object {
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "line": 5,
    "sourceId": "foo2",
    "sourceUrl": "http://localhost:8000/examples/foo2",
  },
  "location": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo2",
  },
}
`;
